--- a/templates/trabajador.html
+++ b/templates/trabajador.html
@@ -11,11 +11,19 @@
             background-size: cover;
             background-repeat: no-repeat;
         }
+        @font-face {
+            font-family: 'lato-regular';
+            src: url('lato-regular.ttf') format('truetype'),
+                url('lato-regular.woff2') format('woff2');
+            font-weight: normal;
+            font-style: normal;
+        }
 
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            font-family: 'lato-regular', sans-serif;
         }
 
         body {
