--- a/templates/declaracion-hijos.html
+++ b/templates/declaracion-hijos.html
@@ -172,15 +172,16 @@
         }
 
         .section-header {
-            background: #2b914d;
             padding: 6px 10px;
             font-weight: bold;
-            font-size: 9px;
-            border: 1px solid #2b914d;
-            border-bottom: none;
-            color: #fff;
-            text-align: center;
+            font-size: 8px;
             margin-bottom: 0px;
+            color: #000;
+            background-color: #89bd94;
+            border-top: 1px solid #61a770;
+            border-left: 1px solid #75b182;
+            border-right: 1px solid #75b182;
+            border-bottom: none;
         }
 
         .checkbox-options {
